--- a/index.html
+++ b/index.html
@@ -1,33 +1,38 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Short+Stack&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <title>bucket hats!</title>
   </head>
   <body>
-    <div class="">
-      <img src="images/logo.jpg" alt="the logo will go here" width=100px height=100px>
-    <h1>BUCKET HATS!</h1>
+    <div class="logo">
+      <img src="images/logo.png" alt="the company logo" width=100px height=100px>
       </div>
-<table>
+      <!-- the logo is also a link back to the homepage (works on the other pages only) -->
 
-<tr>
-  <th>   <a href="shop.html">
-      SHOP
-     </a> </th>
+      <div class="mains">
+      <table> <tr>
+         <th> <a href="shop.html">
+          <h2>  SHOP  </h2>
+         </a> </th>
+      <th> <a href="about.html">
+        <h2>  ABOUT  </h2>
+      </a> </th>
+      <th>  <a href="comm.html">
+        <h2>  COMMUNITY  </h2>
+       </a> </th> </tr>  </table>
+ <!-- these are the main links at the top of the page  -->
+      </div>
+  <div class="homepage">
 
-  <th> <a href="about.html">
-    ABOUT
-  </a> </th>
-  <th> <a href="custom.html">
-     CUSTOMS
-   </a> </th>
+<a href="shop.html"> <img src="images/fall 2021.jpg" alt="fall 2021 collection photo" width=620px> </a>
 
-</table>
-  <div class="">
-  <img src="images/placeholder.jpg" alt="the video will go here">
-
-  <p>  description of the video and the company goes here </p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/DXMkLZXiZI4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<!-- main pg contains the video and  a promo pic -->
   </div>
   </body>
 </html>
