--- a/shop.html
+++ b/shop.html
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Short+Stack&display=swap" rel="stylesheet">
     <meta charset="utf-8">
-    <title>shop/bucket hats</title>
+    <title>shop bucket hats!</title>
   </head>
+
   <body>
-    <div class=""> <a href="index.html">
-      <img src="images/logo.jpg" alt="the logo will go here" width=100px height=100px>
-    <h1>BUCKET HATS!</h1>
-       </a> </div>
-<img src="images/fall 2021.jpg" alt="fall 2021 collection photo" width=620px>
+    <div class="logo">
+      <a href="index.html">
+     <img src="images/logo.png" alt="the logo will go here" width=100px height=100px>
+   </a>
+      </div>
+
+      <div class="mains">
+      <table> <tr>
+         <th> <a href="shop.html">
+          <h2>  SHOP  </h2>
+         </a> </th>
+      <th> <a href="about.html">
+        <h2>  ABOUT  </h2>
+      </a> </th>
+      <th>  <a href="comm.html">
+        <h2>  COMMUNITY  </h2>
+       </a> </th> </tr>  </table>
+<!-- the same main buttons as the homepage -->
+      </div>
 <div class="">
+<img src="images/fall 2021.jpg" alt="fall 2021 collection photo" width=620px>
+</div>
+<!-- the promo pic -->
+<div class="list">
   <table>
 <tr>
   <th> <img src="images/sakuraW.jpg" alt="listing 2" width=200px height=200px> </th>
@@ -28,6 +51,7 @@
   <td> $30 </td>
 </tr>
 </div>
+<!-- i made a table for the listings, their names and prices -->
 <!-- im not sure how the colors will work here but we'll see -->
   </body>
 </html>
