--- a/about.html
+++ b/about.html
@@ -1,44 +1,68 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Short+Stack&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <title>about us!</title>
   </head>
   <body>
     <div class=""> <a href="index.html">
-      <img src="images/logo.jpg" alt="the logo will go here" width=100px height=100px>
-    <h1>BUCKET HATS!</h1>
+   <img src="images/logo.png" alt="the logo will go here" width=100px height=100px>
+
     </a>  </div>
+    <div class="mains">
+    <table> <tr>
+       <th> <a href="shop.html">
+        <h2>  SHOP  </h2>
+       </a> </th>
+    <th> <a href="about.html">
+      <h2>  ABOUT  </h2>
+    </a> </th>
+    <th>  <a href="comm.html">
+      <h2>  COMMUNITY  </h2>
+     </a> </th> </tr>  </table>
+<!-- main buttons same as the other pages.. -->
+    </div>
+
   <h2>MEET THE FOUNDERS!</h2>
   <!-- titles -->
+<div class="list">
+
   <table>
     <tr>
       <th>
-        <img src="images/placeholder.jpg" alt="pic of me" width="200px" height="200px">
+        <img src="images/toomiecon.png" alt="pic of me" width="200px" height="200px">
       </th>
       <th>
-         <img src="images/placeholder.jpg" alt="pic of eva" width="200px" height="200px">
-       </th>
+         <img src="images/evacon.png" alt="pic of eva" width="200px" height="200px">
+       </th> </tr>
+    <tr>
+      <td> <p>toomie</p> </td>
+
+      <td>  <p>eva</p>  </td>
     </tr>
     <tr>
       <td>
-          <p>short bio about me goes here</p>
-      </td>
-      <td>
-          <p>short bio about eva goes here</p>
-      </td>
+      <p>she/her • co-owner of bucket hats!™</p>
+</td>
+<td>she/her • co-owner of bucket hats!™</td>
+    </tr>
+    <tr>
+      <td> from abu dhabi, UAE </td>
+      <td> from wisconsin, USA </td>
+    </tr>
+    <tr>
+      <td> artist & designer </td>
+      <td> bucket hat enthusiast </td>
+    </tr>
+
     </tr>
   </table>
-    <!-- our bios ^^ -->
+  </div>
+  <!-- the table above is for eva and my profiles -->
 
-
-  <h2>COMMUNITY!</h2>
-<div class="">
-  <img src="images/placeholder.jpg" alt="ig post #1">
-  <img src="images/placeholder.jpg" alt="ig post #2">
-  <img src="images/placeholder.jpg" alt="ig post #3">
-
-</div>
-<!-- in css this would be all in the same line -->
   </body>
 </html>
