--- a/about.html
+++ b/about.html
@@ -6,22 +6,24 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Short+Stack&display=swap" rel="stylesheet">
     <meta charset="utf-8">
-    <title>about us!</title>
+    <script type="text/javascript" src="script.js" defer>
+    </script>
+    <title>about us | bucket hats!™</title>
   </head>
   <body>
     <div class=""> <a href="index.html">
    <img src="images/logo.png" alt="the logo will go here" width=100px height=100px>
 
     </a>  </div>
-    <div class="mains">
+    <div class="list">
     <table> <tr>
-       <th> <a href="shop.html">
+       <th> <a class="link" href="shop.html">
         <h2>  SHOP  </h2>
        </a> </th>
-    <th> <a href="about.html">
+    <th> <a class="link" href="about.html">
       <h2>  ABOUT  </h2>
     </a> </th>
-    <th>  <a href="comm.html">
+    <th>  <a class="link" href="comm.html">
       <h2>  COMMUNITY  </h2>
      </a> </th> </tr>  </table>
 <!-- main buttons same as the other pages.. -->
@@ -34,10 +36,10 @@
   <table>
     <tr>
       <th>
-        <img src="images/toomiecon.png" alt="pic of me" width="200px" height="200px">
+        <img src="images/toomiecon.png" id="toomie"  alt="pic of me" width="200px" height="200px">
       </th>
       <th>
-         <img src="images/evacon.png" alt="pic of eva" width="200px" height="200px">
+         <img src="images/evacon.png" id="eva"  alt="pic of eva" width="200px" height="200px">
        </th> </tr>
     <tr>
       <td> <p>toomie</p> </td>
@@ -61,8 +63,19 @@
 
     </tr>
   </table>
-  </div>
-  <!-- the table above is for eva and my profiles -->
+</div>
+<!-- the table above is for eva and my profiles -->
+
+  <div class="socials">
+  <a class="link" href="https://www.youtube.com/embed/DXMkLZXiZI4">
+     <img src="images/icon1.jpg" height= 40px weight=40px alt="insta"> </a>
+   <a class="link" href="https://www.youtube.com/embed/DXMkLZXiZI4">
+    <img src="images/icon2.JPG" height= 40px weight=40px alt="twt"> </a>
+      <a class="link" href="https://www.youtube.com/embed/DXMkLZXiZI4">
+    <img src="images/icon3.PNG" height= 40px weight=40px alt="tiktok"> </a>
+    <!-- socials - they link to the video on youtube- added them here too for fun! -->
+        </div>
+
 
   </body>
 </html>
