--- a/shop.html
+++ b/shop.html
@@ -6,7 +6,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Short+Stack&display=swap" rel="stylesheet">
     <meta charset="utf-8">
-    <title>shop bucket hats!</title>
+    <script type="text/javascript" src="script.js" defer>
+    </script>
+    <title>shop | bucket hats!™</title>
   </head>
 
   <body>
@@ -16,15 +18,15 @@
    </a>
       </div>
 
-      <div class="mains">
+      <div class="list">
       <table> <tr>
-         <th> <a href="shop.html">
+         <th> <a class="link" href="shop.html">
           <h2>  SHOP  </h2>
          </a> </th>
-      <th> <a href="about.html">
+      <th> <a class="link" href="about.html">
         <h2>  ABOUT  </h2>
       </a> </th>
-      <th>  <a href="comm.html">
+      <th>  <a class="link" href="comm.html">
         <h2>  COMMUNITY  </h2>
        </a> </th> </tr>  </table>
 <!-- the same main buttons as the homepage -->
@@ -36,9 +38,9 @@
 <div class="list">
   <table>
 <tr>
-  <th> <img src="images/sakuraW.jpg" alt="listing 2" width=200px height=200px> </th>
-  <th> <img src="images/daisyW.jpg" alt="listing 1" width=200px height=200px> </th>
-  <th> <img src="images/rainbow.jpg" alt="listing 3" width=200px height=200px> </th>
+  <th> <img src="images/sakuraW.JPG" id="sakura" alt="listing 2" width=200px height=200px> </th>
+  <th> <img src="images/daisyW.JPG" id="daisy" alt="listing 1" width=200px height=200px> </th>
+  <th> <img src="images/rainbow.JPG" id="rainbow" alt="listing 3" width=200px height=200px> </th>
 </tr>
 <tr>
 <td> Sakura Hat </td>
