--- a/comm.html
+++ b/comm.html
@@ -6,7 +6,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Short+Stack&display=swap" rel="stylesheet">
     <meta charset="utf-8">
-    <title>COMMUNITY!</title>
+    <script type="text/javascript" src="script.js" defer>
+    </script>
+    <title>community | bucket hats!™</title>
   </head>
   <body>
     <div class="logo">
@@ -15,15 +17,15 @@
      </a>
       </div>
 
-  <div class="mains">
+  <div class="list">
   <table> <tr>
-     <th> <a href="shop.html">
+     <th> <a class="link" href="shop.html">
       <h2>  SHOP  </h2>
      </a> </th>
-  <th> <a href="about.html">
+  <th> <a class="link" href="about.html">
     <h2>  ABOUT  </h2>
   </a> </th>
-  <th>  <a href="comm.html">
+  <th>  <a class="link" href="comm.html">
     <h2>  COMMUNITY  </h2>
    </a> </th> </tr>  </table>
 <!-- main links -->
@@ -32,17 +34,20 @@
 
     <h1>COMMUNITY!</h1>
     <div class="insta">
-      <img src="images/ig post1.jpeg" height=400px  alt="ig post #1">
-      <img src="images/igpost2.jpeg" height= 400px  alt="ig post #2">
-      <img src="images/igpost3.jpeg" height= 400px alt="ig post #3">
+      <img src="images/ig post1.JPEG" height=400px  alt="ig post #1">
+      <img src="images/igpost2.JPEG" height= 400px  alt="ig post #2">
+      <img src="images/igpost3.JPEG" height= 400px alt="ig post #3">
 <!-- the insta posts i made ^ :] -->
     </div>
-    <!-- in css this would be all in the same line -->
+
     <div class="socials">
-      <img src="images/icon1.jpg" height= 40px weight=40px alt="insta">
-      <img src="images/icon2.jpg" height= 40px weight=40px alt="twt">
-      <img src="images/icon3.png" height= 40px weight=40px alt="tiktok">
-<!-- socials - they have no links.. -->
+    <a class="link" href="https://www.youtube.com/embed/DXMkLZXiZI4">
+       <img src="images/icon1.jpg" height= 40px weight=40px alt="insta"> </a>
+     <a class="link" href="https://www.youtube.com/embed/DXMkLZXiZI4">
+      <img src="images/icon2.JPG" height= 40px weight=40px alt="twt"> </a>
+        <a class="link" href="https://www.youtube.com/embed/DXMkLZXiZI4">
+      <img src="images/icon3.PNG" height= 40px weight=40px alt="tiktok"> </a>
+<!-- socials - they link to the video on youtube.. -->
     </div>
 
   </body>
