--- a/index.html
+++ b/index.html
@@ -5,24 +5,29 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Short+Stack&display=swap" rel="stylesheet">
+<!-- i linked a font to my site! its cute :] -->
+  <script type="text/javascript" src="script.js" defer>
+  </script>
+
     <meta charset="utf-8">
-    <title>bucket hats!</title>
+    <title>bucket hats!™</title>
   </head>
+  
   <body>
     <div class="logo">
       <img src="images/logo.png" alt="the company logo" width=100px height=100px>
       </div>
       <!-- the logo is also a link back to the homepage (works on the other pages only) -->
 
-      <div class="mains">
+      <div class="list">
       <table> <tr>
-         <th> <a href="shop.html">
+         <th> <a class="link" href="shop.html">
           <h2>  SHOP  </h2>
          </a> </th>
-      <th> <a href="about.html">
+      <th> <a class="link" href="about.html">
         <h2>  ABOUT  </h2>
       </a> </th>
-      <th>  <a href="comm.html">
+      <th>  <a class="link" href="comm.html">
         <h2>  COMMUNITY  </h2>
        </a> </th> </tr>  </table>
  <!-- these are the main links at the top of the page  -->
