--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta charset="utf-8">
     <title>bucket hats!™</title>
   </head>
-  
+
   <body>
     <div class="logo">
       <img src="images/logo.png" alt="the company logo" width=100px height=100px>
@@ -36,7 +36,7 @@
 
 <a href="shop.html"> <img src="images/fall 2021.jpg" alt="fall 2021 collection photo" width=620px> </a>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/DXMkLZXiZI4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe class="socials" width="560" height="315" src="https://www.youtube.com/embed/DXMkLZXiZI4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <!-- main pg contains the video and  a promo pic -->
   </div>
   </body>
