--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       </div>
   <div class="homepage">
 
-<a href="shop.html"> <img src="images/fall 2021.jpg" alt="fall 2021 collection photo" width=620px> </a>
+<a href="shop.html"> <img src="images/fall 2021.jpg" alt="fall 2021 collection photo" width=720px> </a>
 
-<iframe class="list" width="560" height="315" src="https://www.youtube.com/embed/DXMkLZXiZI4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/DXMkLZXiZI4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <!-- main pg contains the video and  a promo pic -->
   </div>
   </body>
