--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <script type="text/javascript" src="script.js" defer>
   </script>
 
+<link rel="shortcut icon" type="image/png" href="images/favicon.png">
+
     <meta charset="utf-8">
     <title>bucket hats!™</title>
   </head>
