--- a/shop.html
+++ b/shop.html
@@ -8,6 +8,7 @@
     <meta charset="utf-8">
     <script type="text/javascript" src="script.js" defer>
     </script>
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
     <title>shop | bucket hats!™</title>
   </head>
 
